# plutopanda-svcs

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
code/api_tasks_mgmt/: Cargo.toml
code/api_tasks_mgmt/migrations/: 20231230223227_initial_wi_models.sql  20231231123000_update_timetsamp_fields.sql  20240103110120_work_item_models.sql  20240107173009_work_log_models.sql
code/api_tasks_mgmt/src/: api.rs  main.rs  state.rs
code/api_tasks_mgmt/src/db/: mod.rs
code/api_tasks_mgmt/src/handlers/: mod.rs  projects.rs  work_items.rs
code/lib_api_common/: Cargo.toml
code/lib_api_common/src/: db.rs  errors.rs  lib.rs  tracing.rs
