[workspace]

members = [
    "code/lib_api_common",
    "code/api_tasks_mgmt"
]

[workspace.dependencies]
axum = { version = "0.7.2" , features = ["tracing", "macros"]}
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
chrono = {version = "0.4.31", features = ["serde"]}
tokio-postgres =  {  version = "0.7.10" ,features = ["runtime", "array-impls", "with-chrono-0_4"] }
sqlx = { version = "0.7.3", features = [ "runtime-tokio", "tls-native-tls", "any", "postgres" , "migrate" , "chrono"]  }
