[package]
name = "lib_api_common"
version = "0.1.0"
edition = "2021"
[lib]
name="lib_api_common"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
axum = { workspace = true, features = ["tracing", "macros"]}
serde = { workspace=true, features = ["derive"] }
serde_json = { workspace=true }
tokio = {workspace=true, features = ["full"] }
tracing = {workspace=true}
tracing-subscriber = { workspace=true, features = ["env-filter"] }
sqlx = { workspace = true, features = [ "runtime-tokio", "tls-native-tls", "any", "postgres", "migrate", "chrono" ] }
chrono = {workspace=true}
